client/src/pages/TaskView/Taskview.module.scss
@use "@/styles/variables" as v;
$base-size: 1.2em;

.checkbox {
  width: $base-size;
  height: $base-size;
  border: 2px solid var(--primary-color);
  border-radius: $base-size;

  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;

  &.checked {
    background-color: var(--primary-color);
    color: var(--on-primary-color);
  }
}

.loadingIndicatorContainer {
  text-align: center;
  box-sizing: border-box;
  padding: 7.8px; // + 1.6 * rows (6)  / 2
}

.editIcons {
  font-size: v.$font-xl;
}

.customDay {
  opacity: 0.87;
  border-radius: 500px;
  border: 6px solid transparent;
  width: 2em;

  &:hover:not(.customSelectedDay) {
    background-color: var(--border-primary-color) !important;
    border-color: var(--border-primary-color);

    transition: border-color 0.2s ease-in-out, background-color 0.2s ease-in-out;
  }
}

.customSelectedDay {
  background-color: var(--primary-color) !important;
  color: var(--on-primary-color);
}

